--- a/src/ui/fab/style.scss
+++ b/src/ui/fab/style.scss
@@ -33,7 +33,7 @@
 
   &_variant_primary {
     background: token.$color_brand_primary;
-    color: token.$color_text_inverse;
+    color: token.$color_brand_on_primary;
 
     &:hover:not(:disabled)::before {
       background: token.$color_state_hover_on_dark;
